--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
           <div class="subtitle--section">
             <h2>Entre em Contato Conosco Para Dúvidas, Suporte ou Mais Informações</h2>
           </div>
-          <div class="contact-conatiner">
+          <div class="contact-conatiner" >
             <div class="col1-contact">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2562231849565!2d-44.98862382515158!3d-19.871399836485683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa7560e006d70fd%3A0x565c29c8a68c8882!2sR.%20Dimas%20Guimar%C3%A3es%2C%20792%20-%20Centro%2C%20Nova%20Serrana%20-%20MG%2C%2035520-012!5e0!3m2!1spt-BR!2sbr!4v1724785216878!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -676,29 +676,60 @@
                  <h4>Ns Clean</h4>
               </div>
               <div class="foo-text">
-                <p>Na <strong>Ns Clean</strong>, cuidamos do seu ambiente e de suas roupas com excelência. Oferecemos serviços especializados em <strong>higienização de estofados</strong>, <strong>limpeza de tapetes</strong>, cortinas, e soluções completas de <strong>lavanderia</strong> para empresas e residências. Nossa missão é proporcionar qualidade, conforto e bem-estar através de um atendimento diferenciado e personalizado. Conte com a<strong> Ns Clean</strong> para um serviço de confiança e resultados impecáveis!</p>
+                <p>Na <strong>Ns Clean</strong>, cuidamos do seu ambiente e de suas roupas com excelência. Oferecemos serviços especializados em <strong>higienização de estofados</strong>, <strong>limpeza de tapetes</strong>, cortinas, e soluções completas de <strong>lavanderia</strong> para empresas e residências.</p>
               </div>
               <div class="foo-social">
                 <ul>
-                  <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                  <li><a href="https://www.instagram.com/nscleanlavanderia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i></a></li>
                   <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                  <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                  <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊"><i class="fa-brands fa-whatsapp"></i></a></li>
                 </ul>
               </div>
             </div>
-            <div class="foo-col2">
-              <div class="foo-title">
-                <h4 class="pqn">Links</h4>
+            <div class="foo-cols">
+              <div class="foo-col2">
+                <div class="foo-title">
+                  <h4 class="pqn">Links</h4>
+                </div>
+                <div class="foo-linksnavigation">
+                  <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#testemunhas">Cliente</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                  </ul>
+                </div>
               </div>
-              <div class="foo-linksnavigation">
-                <ul>
-                  <li><a href="#home">Home</a></li>
-                  <li><a href="#services">Serviços</a></li>
-                  <li><a href="#testemunhas">Cliente</a></li>
-                  <li><a href="#contact">Contato</a></li>
-                </ul>
+              <div class="foo-col3">
+                <div class="foo-title">
+                  <h4 class="pqn">Serviços</h4>
+                </div>
+                <div class="foo-linksnavigation">
+                  <ul>
+                    <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Higienização</a></li>
+                    <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Lavandeira</a></li>
+                    <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Leva e trás</a></li>
+                    <!-- <li><a href="#contact">Contato</a></li> -->
+                  </ul>
+                </div>
+              </div>
+              <div class="foo-col4">
+                <div class="foo-title">
+                  <h4 class="pqn">Local</h4>
+                </div>
+                <div class="foo-linksnavigation">
+                  <ul>
+                    <li><a href="#contact">Rua Dimas Guimarães 792</a></li>
+                    <li><a href="#contact">Minas Gerais - MG</a></li>
+                    <li><a href="#contact">CEP: 35520-012</a></li>
+                    <li><a href="#contact">CNPJ: 55.398.380/0001-56</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
+          </div>
+          <div class="direitos">
+            <p>&copy;2024 <strong>Ns Clean</strong> | Todos os direitos reservados.</p>
           </div>
       </div>
     </footer>
