--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="logoMobil">
                 <img src="img/higienização-estofados-logo.svg" alt="" />
               </div>
-              <ul>
+              <ul class="scrolllTo">
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#testemunhas">Cliente</a></li>
@@ -680,9 +680,9 @@
               </div>
               <div class="foo-social">
                 <ul>
-                  <li><a href="https://www.instagram.com/nscleanlavanderia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i></a></li>
-                  <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                  <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊"><i class="fa-brands fa-whatsapp"></i></a></li>
+                  <li><a href="https://www.instagram.com/nscleanlavanderia/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                  <li><a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                  <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -692,7 +692,7 @@
                   <h4 class="pqn">Links</h4>
                 </div>
                 <div class="foo-linksnavigation">
-                  <ul>
+                  <ul class="scrolllTo">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#testemunhas">Cliente</a></li>
@@ -705,7 +705,7 @@
                   <h4 class="pqn">Serviços</h4>
                 </div>
                 <div class="foo-linksnavigation">
-                  <ul>
+                  <ul class="scrolllTo">
                     <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Higienização</a></li>
                     <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Lavandeira</a></li>
                     <li><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊">Leva e trás</a></li>
@@ -718,7 +718,7 @@
                   <h4 class="pqn">Local</h4>
                 </div>
                 <div class="foo-linksnavigation">
-                  <ul>
+                  <ul class="scrolllTo">
                     <li><a href="#contact">Rua Dimas Guimarães 792</a></li>
                     <li><a href="#contact">Minas Gerais - MG</a></li>
                     <li><a href="#contact">CEP: 35520-012</a></li>
