--- a/index.html
+++ b/index.html
@@ -649,10 +649,10 @@
                 </div>
               </div>
               <div class="item-contact">
-                <div><i class="fa-solid fa-envelope"></i></div>
+                <div><a href="mailto:contato@nsclean.com"><i class="fa-solid fa-envelope"></a></i></div>
                 <div class="contact-text">
                   <p>E-mail</p> 
-                  <p>contato@nsclean.com.br</p>
+                  <p><a href="mailto:contato@nsclean.com">contato@nsclean.com.br</a></p>
                 </div>
               </div>
               <div class="item-contact">
