--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Higienização e lavanderia de estofados, sofás e carpetes com qualidade e eficiência. Agende seu serviço com a Ns Clean!">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -28,8 +31,7 @@
     <script src="js/script.js" defer></script>
     <!-- End JS -->
     <title>
-      Lavanderia e Higienização de estofados - Higienização de sofá -
-      Higienização de carpete
+      Lavanderia e Higienização de Estofados, Sofás e Carpetes | Qualidade Ns Clean
     </title>
   </head>
   <body>
