--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Higienização e lavanderia de estofados, sofás e carpetes com qualidade e eficiência. Agende seu serviço com a Ns Clean!">
+    <meta name="robots" content="follow">
 
+
+    <!-- redes sociais link compartilhados -->
+     <meta property="og:title" content="Lavanderia e Higienização de Estofados">
+     <meta property="og:description" content="Serviços de qualidade para suas roupas, estofados, sofás e carpetes.">
+     <meta property="og:image" content=" ">
+     <meta property="og:url" content="">
+     <!-- End link compartilhados -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Code Font Awesome -->
+    <!-- start Code Font Awesome -->
     <script
       src="https://kit.fontawesome.com/f50987608b.js"
       crossorigin="anonymous"
     ></script>
     <!-- End Font Awesome -->
 
-    <!-- Code Google Fonts -->
+    <!-- Start Code Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
