--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- redes sociais link compartilhados -->
      <meta property="og:title" content="Lavanderia e Higienização de Estofados">
      <meta property="og:description" content="Serviços de qualidade para suas roupas, estofados, sofás e carpetes.">
-     <meta property="og:image" content=" ">
-     <meta property="og:url" content="">
+     <meta property="og:image" content="">
+     <meta property="og:url" content="https://nsclean.com.br">
      <!-- End link compartilhados -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
