--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="ajustHeader">
             <div class="logo">
-              <img src="img/higienização-estofados-logo.svg" alt="" />
+              <img src="img/higienização-estofados-logo.svg" alt="Logo do site Ns clean" />
             </div>
             <nav class="menuNav">
               <div class="logoMobil">
@@ -75,7 +75,7 @@
             <div class="col1">
               <div class="titleHeader">
                 <h1>
-                  <strong>Lavanderia</strong> e <br />
+                  <strong>Lavanderia</strong> e 
                   <strong>Higienização de Estofados</strong>
                 </h1>
               </div>
@@ -97,8 +97,7 @@
             </div>
             <div class="col2">
               <div class="imgHeader">
-                <img src="img/undraw_group_selfie_re_h8gb.svg" alt="" />
-                <!-- <img src="img/undraw_logistics_x-4-dc.svg" alt="" /> -->
+                <img src="img/delivery-de-roupa.svg" alt="" />
               </div>
             </div>
           </div>
@@ -107,7 +106,7 @@
               <div>
                 <img
                   src="img/higienização-de-estofados-nova-serrana.svg"
-                  alt=""
+                  alt="Ícone de higienização de sofá com aspirador"
                 />
               </div>
               <div>
@@ -115,19 +114,19 @@
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia-entrega.svg" alt="" /></div>
+              <div><img src="img/lavanderia-entrega.svg" alt="Ícone de um carro fazendo entregas" /></div>
               <div>
                 <h3><strong>Leva e trás</strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia-roupas.svg" alt="" /></div>
+              <div><img src="img/lavanderia-roupas.svg" alt="Ícone de uma máquina de lavar roupas com um cesto de roupa" /></div>
               <div>
                 <h3><strong>Lavanderia </strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/roupa-limpa.svg" alt="" /></div>
+              <div><img src="img/roupa-limpa.svg" alt="Ícone de uma camisa no cabide" /></div>
               <div>
                 <h3><strong>Roupas Limpas</strong></h3>
               </div>
