--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Higienização e lavanderia de estofados, sofás e carpetes com qualidade e eficiência. Agende seu serviço com a Ns Clean!">
     <meta name="robots" content="follow">
-
+    <meta name="google-site-verification" content="wV3hXy9Sd3V318syizskFuClfKj5kITHHR2IywjU82c" />
 
     <!-- redes sociais link compartilhados -->
      <meta property="og:title" content="Lavanderia e Higienização de Estofados">
@@ -33,11 +33,11 @@
 
     <!-- Code CSS -->
     <link rel="stylesheet" href="scss/style.css" />
-    <!-- End CSS -->
+    <!-- End code CSS -->
 
     <!-- Code JS -->
     <script src="js/script.js" defer></script>
-    <!-- End JS -->
+    <!-- End code JS -->
     <title>
       Lavanderia e Higienização de Estofados, Sofás e Carpetes | Qualidade Ns Clean
     </title>
