--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div>
                 <img
                   src="img/higienização-de-estofados-nova-serrana.svg"
-                  alt="Ícone de higienização de sofá com aspirador"
+                  alt="Ícone de higienização de sofá com aspirador | Ns clean Nova Serrana"
                 />
               </div>
               <div>
@@ -114,19 +114,19 @@
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia-entrega.svg" alt="Ícone de um carro fazendo entregas" /></div>
+              <div><img src="img/lavanderia-entrega.svg" alt="Ícone de um carro fazendo entregas | Ns clean Nova Serrana" /></div>
               <div>
                 <h3><strong>Leva e trás</strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia-roupas.svg" alt="Ícone de uma máquina de lavar roupas com um cesto de roupa" /></div>
+              <div><img src="img/lavanderia-roupas.svg" alt="Ícone de uma máquina de lavar roupas com um cesto de roupa | Ns clean  Nova Serrana" /></div>
               <div>
                 <h3><strong>Lavanderia </strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/roupa-limpa.svg" alt="Ícone de uma camisa no cabide" /></div>
+              <div><img src="img/roupa-limpa.svg" alt="Ícone de uma camisa no cabide | Ns clean - Nova Serrana" /></div>
               <div>
                 <h3><strong>Roupas Limpas</strong></h3>
               </div>
@@ -137,10 +137,11 @@
       <div class="video">
         <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
         <video
+          controls
           width="80%"
           height="80%"
-          title="Higienização e lavandeira Ns Clean"
-          controls
+          title="Higienização de Estofados e Lavandeira - Ns Clean Nova Serrana"
+          poster="img/Lavandeira-Higienizacao-ns-clean-nova-serrana.jpg"
         >
           <source type="video/mp4" id="videoFrame" />
           Seu navegador não suporta o elemento do vídeo.
@@ -740,6 +741,9 @@
           <div class="direitos">
             <p>&copy;2024 <strong>Ns Clean</strong> | Todos os direitos reservados.</p>
           </div>
+      </div>
+      <div class="btnZap">
+        <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </footer>
   </body>
