--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    <!-- Aos - biblioteca -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- End - Aos -->
     <!-- start Code Font Awesome -->
     <script
       src="https://kit.fontawesome.com/f50987608b.js"
@@ -102,7 +105,7 @@
             </div>
           </div>
           <div class="cardsHeaderContainer">
-            <div class="card-item">
+            <div class="card-item" data-aos="flip-left">
               <div>
                 <img
                   src="img/higienização-de-estofados-nova-serrana.svg"
@@ -113,19 +116,19 @@
                 <h3><strong>Higienização</strong></h3>
               </div>
             </div>
-            <div class="card-item">
+            <div class="card-item" data-aos="flip-left">
               <div><img src="img/lavanderia-entrega.svg" alt="Ícone de um carro fazendo entregas | Ns clean Nova Serrana" /></div>
               <div>
                 <h3><strong>Leva e trás</strong></h3>
               </div>
             </div>
-            <div class="card-item">
+            <div class="card-item" data-aos="flip-left">
               <div><img src="img/lavanderia-roupas.svg" alt="Ícone de uma máquina de lavar roupas com um cesto de roupa | Ns clean  Nova Serrana" /></div>
               <div>
                 <h3><strong>Lavanderia </strong></h3>
               </div>
             </div>
-            <div class="card-item">
+            <div class="card-item" data-aos="flip-left">
               <div><img src="img/roupa-limpa.svg" alt="Ícone de uma camisa no cabide | Ns clean - Nova Serrana" /></div>
               <div>
                 <h3><strong>Roupas Limpas</strong></h3>
@@ -746,5 +749,7 @@
         <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </footer>
+
+   
   </body>
 </html>
