--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             </div>
           </div>
           <div class="cardsHeaderContainer">
-            <div class="card-item" data-aos="flip-left">
+            <div class="card-item" data-aos="fade-up"
+            data-aos-anchor-placement="bottom-bottom">
               <div>
                 <img
                   src="img/higienização-de-estofados-nova-serrana.svg"
@@ -116,19 +117,22 @@
                 <h3><strong>Higienização</strong></h3>
               </div>
             </div>
-            <div class="card-item" data-aos="flip-left">
+            <div class="card-item" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
               <div><img src="img/lavanderia-entrega.svg" alt="Ícone de um carro fazendo entregas | Ns clean Nova Serrana" /></div>
               <div>
                 <h3><strong>Leva e trás</strong></h3>
               </div>
             </div>
-            <div class="card-item" data-aos="flip-left">
+            <div class="card-item" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
               <div><img src="img/lavanderia-roupas.svg" alt="Ícone de uma máquina de lavar roupas com um cesto de roupa | Ns clean  Nova Serrana" /></div>
               <div>
                 <h3><strong>Lavanderia </strong></h3>
               </div>
             </div>
-            <div class="card-item" data-aos="flip-left">
+            <div class="card-item" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
               <div><img src="img/roupa-limpa.svg" alt="Ícone de uma camisa no cabide | Ns clean - Nova Serrana" /></div>
               <div>
                 <h3><strong>Roupas Limpas</strong></h3>
