--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="colSection-on">
               <div class="titleLocation">
                 <p>
-                  <strong>Ns Clean</strong> Excelência em
+                  <strong class="destaque">Ns Clean</strong> Excelência em
                   <strong>Higienização</strong> e
                   <strong>Lavanderia</strong> para sua Tranquilidade
                 </p>
