--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="ajustHeader">
             <div class="logo">
-              <img src="img/higienização-estofados-logo.svg" alt="Logo do site Ns clean" />
+              <img src="img/nsclean-logo-site .png" alt="Logo do site Ns clean" />
             </div>
             <nav class="menuNav">
               <div class="logoMobil">
@@ -145,10 +145,10 @@
         <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
         <video
           controls
-          width="80%"
-          height="80%"
+          width="56%"
+          height="82%"
           title="Higienização de Estofados e Lavandeira - Ns Clean Nova Serrana"
-          poster="img/Lavandeira-Higienizacao-ns-clean-nova-serrana.jpg"
+          poster="img/nsclean-nova-serra-recepcao.jpg"
         >
           <source type="video/mp4" id="videoFrame" />
           Seu navegador não suporta o elemento do vídeo.
@@ -181,7 +181,7 @@
 
                   <!-- Slide Images -->
                   <div class="slide first">
-                    <img src="img/equipe-ns-clean (1).jpg" alt="imagem 3" />
+                    <img src="img/nsclean-nova-serra-recepcao.jpg" alt="imagem 3" />
                   </div>
                   <div class="slide">
                     <img src="img/lavandeira (1).jpg" alt="imagem 2" />
@@ -257,16 +257,18 @@
                 </ul>
               </div>
               <div class="history">
-                <iframe
-                  width="100%"
-                  height="315"
-                  src="https://www.youtube.com/embed/D302eEkYVrY?si=7rVa6Y3lbITW4t7i"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                ></iframe>
+                <div class="video">
+                  <video
+                    controls
+                    width="100%"
+                    height="350px"
+                    title="Higienização de Estofados e Lavandeira - Ns Clean Nova Serrana"
+                    poster="img/nsclean-nova-serrana-contato.png"
+                  >
+                    <source src="img/nsclean-nova-serrana-qualidade.mp4" type="video/mp4"/>
+                    Seu navegador não suporta o elemento do vídeo.
+                  </video>
+                </div>
               </div>
               <div class="contact">
                 <button class="btnHistory"><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank">Entre em contato</a></button>
@@ -669,14 +671,15 @@
                 <div><a href="mailto:contato@nsclean.com"><i class="fa-solid fa-envelope"></a></i></div>
                 <div class="contact-text">
                   <p>E-mail</p> 
-                  <p><a href="mailto:contato@nsclean.com">contato@nsclean.com.br</a></p>
+                  <p><a href="mailto:contato@nsclean.com">nscleanlavanderia@gmail.com 
+                  </a></p>
                 </div>
               </div>
               <div class="item-contact">
                 <div><i class="fa-solid fa-clock"></i></i></div>
                 <div class="contact-text">
                   <p>Atendimento</p> 
-                  <p>Segunda a Sexta / 9:00 ás 18:00</p>
+                  <p>Segunda a Sexta / 7:00 ás 17:00</p>
                 </div>
               </div>
              
