--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
                     <img src="img/nsclean-nova-serra-recepcao.jpg" alt="imagem 3" />
                   </div>
                   <div class="slide">
-                    <img src="img/lavandeira (1).jpg" alt="imagem 2" />
+                    <img src="img/equipe-ns-clean (1).jpg" alt="imagem 2" />
                   </div>
                   <div class="slide">
                     <img src="img/lavagem-de-terno (1).jpg" alt="imagem 1" />
                   </div>
                   <div class="slide">
                     <img
-                      src="img/higienização-de-estofados-carpetes (1).jpg"
+                      src="img/lavandeira (1).jpg"
                       alt="imagem 4"
                     />
                   </div>
