--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
             </h2>
           </div>
           <div class="service--cards">
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
               <div class="card--img">
                 <img src="img/estofados-de-carro.png" alt="" />
               </div>
@@ -302,7 +304,9 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
               <div class="card--img">
                 <img src="img/higienizacao-sofa.png" alt="" />
               </div>
@@ -320,7 +324,9 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
               <div class="card--img">
                 <img src="img/higienizacao-tapete.png" alt="" />
               </div>
@@ -337,7 +343,9 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
               <div class="card--img">
                 <img src="img/lavagem-de-roupa.png" alt="" />
               </div>
@@ -353,7 +361,8 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-up"
+            data-aos-anchor-placement="top-center">
               <div class="card--img">
                 <img src="img/higienizacao-de-cadeiras.png" alt="" />
               </div>
@@ -369,7 +378,8 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-up"
+            data-aos-anchor-placement="top-center">
               <div class="card--img">
                 <img src="img/higienizacao-de-carpetes.png" alt="" />
               </div>
@@ -386,7 +396,8 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-up"
+            data-aos-anchor-placement="top-center">
               <div class="card--img">
                 <img src="img/higienizacao-de-cama.png" alt="" />
               </div>
@@ -403,7 +414,8 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
-            <div class="card--item">
+            <div class="card--item" data-aos="fade-up"
+            data-aos-anchor-placement="top-center">
               <div class="card--img">
                 <img src="img/lavagem_de_roupa.jpg" alt="" />
               </div>
@@ -465,7 +477,9 @@
                   "Fiquei muito satisfeito com o serviço da Ns Clean. Minhas roupas voltaram impecáveis, como se fossem novas. O cuidado com cada detalhe realmente faz a diferença. Com certeza, voltarei a utilizar os serviços!"
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -487,7 +501,9 @@
                   "A equipe da Ns Clean é super profissional. Além de entregarem tudo limpo e bem cuidado, o atendimento é sempre cordial e atencioso. Não tenho nada a reclamar, só elogios!"
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -509,7 +525,9 @@
                   "O serviço de higienização da Ns Clean é excelente. Meus estofados ficaram com uma aparência renovada, e o processo todo foi muito eficiente. Recomendo para todos!"
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -531,7 +549,9 @@
                   "Adorei o resultado! Minhas roupas e estofados voltaram perfeitos, sem nenhum defeito ou mancha. O serviço foi rápido e o atendimento, impecável. Muito obrigada, Ns Clean!"
                 </div>
               </div>
-              <div class="slide2">
+              <div class="slide2" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -553,7 +573,9 @@
                   "Muito satisfeito com a qualidade do serviço da Ns Clean. Eles cuidam das minhas roupas com tanta dedicação que nem parece uma lavanderia comum. Atendimento excelente!"
                 </div>
               </div>
-              <div class="slide2 noneSlide">
+              <div class="slide2 noneSlide" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -575,7 +597,9 @@
                   "A Ns Clean superou minhas expectativas com o serviço de lavanderia para o meu restaurante. As toalhas e uniformes sempre voltam impecáveis e com uma fragrância agradável."
                 </div>
               </div>
-              <div class="slide2 noneSlide">
+              <div class="slide2 noneSlide" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
@@ -597,7 +621,9 @@
                   "Contratei a Ns Clean para a higienização completa da minha casa, e o resultado foi excelente. A equipe foi muito profissional, usando produtos de alta qualidade e deixando cada canto da casa brilhando."
                 </div>
               </div>
-              <div class="slide2 noneSlide">
+              <div class="slide2 noneSlide" data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="2000">
                 <div class="imgGoogle">
                   <img src="img/google (1).png" alt="">
                 </div>
