--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="col2">
               <div class="imgHeader">
-                <img src="img/delivery-de-roupa.svg" alt="" />
+                <img src="img/nsclean-lavanderia.png" alt="" />
               </div>
             </div>
           </div>
