--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                   <strong>Higienização</strong> e
                   <strong>Lavanderia</strong> para sua Tranquilidade
                 </p>
+                <p>
+                 Somos especialistas em <strong>higienização e lavanderia</strong>, dedicados a oferecer serviços de alta qualidade que atendem às suas necessidades. Com 5 anos de experiência no setor, nosso compromisso é proporcionar a você a melhor experiência possível, combinando tecnologia de ponta com um atendimento personalizado.
+                </p>
               </div>
               <div class="slider">
                 <div class="slides">
@@ -236,6 +239,7 @@
                 </h3>
               </div>
               <div class="listService">
+                <p>O Que fazemos:</p>
                 <ul>
                   <li>
                     <i class="fa-regular fa-circle-check"></i
@@ -251,8 +255,12 @@
                     ><strong>Limpeza de Veículos</strong>
                   </li>
                   <li>
-                    <i class="fa-regular fa-circle-check"></i>Serviço de
-                    <strong>Lavagem a Seco</strong>
+                    <i class="fa-regular fa-circle-check"></i>
+                    <strong>Tratamento de Roupas Delicadas</strong>
+                  </li>
+                  <li>
+                    <i class="fa-regular fa-circle-check"></i>
+                    <strong>Serviço de Coleta e Entrega</strong>
                   </li>
                 </ul>
               </div>
