--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="ajustHeader">
             <div class="logo">
-              <img src="img/nsclean-logo-site .png" alt="Logo do site Ns clean" />
+              <a href="#home"><img src="img/nsclean-logo-site .png" alt="Logo do site Ns clean" /></a>
             </div>
             <nav class="menuNav">
               <div class="logoMobil">
