--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <nav class="menuNav">
               <div class="logoMobil">
-                <img src="img/higienização-estofados-logo.svg" alt="" />
+                <img src="img/higienização-estofados-logo.svg" alt="Logo do site Ns clean" />
               </div>
               <ul class="scrolllTo">
                 <li><a href="#about">Sobre</a></li>
@@ -100,7 +100,7 @@
             </div>
             <div class="col2">
               <div class="imgHeader">
-                <img src="img/nsclean-lavanderia.png" alt="Imagem de roupas no cabide | Ns clean Nova serrana" />
+                <img src="img/nsclean-recepcao-higienizacao-lavandeira.png" alt="Imagem de roupas no cabide | Ns clean Nova serrana" />
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
           width="70%"
           height="82%"
           title="Higienização de Estofados e Lavandeira - Ns Clean Nova Serrana"
-          poster="img/nsclean-nova-serra-recepcao.jpg"
+          poster="img/nsclean-nova-serrana-contato.png"
         >
           <source type="video/mp4" id="videoFrame" />
           Seu navegador não suporta o elemento do vídeo.
@@ -184,19 +184,20 @@
 
                   <!-- Slide Images -->
                   <div class="slide first">
-                    <img src="img/nsclean-nova-serra-recepcao.jpg" alt="imagem 3" />
+                    <img src="img/nsclean-terno-limpeza.png" alt="Foto de um terno no cabide e foto de vestidos pendurados" />
                   </div>
                   <div class="slide">
-                    <img src="img/equipe-ns-clean (1).jpg" alt="imagem 2" />
+                    
+                    <img
+                    src="img/lavandeira (1).jpg"
+                    alt="imagem 4"
+                  />
                   </div>
                   <div class="slide">
                     <img src="img/lavagem-de-terno (1).jpg" alt="imagem 1" />
                   </div>
                   <div class="slide">
-                    <img
-                      src="img/lavandeira (1).jpg"
-                      alt="imagem 4"
-                    />
+                    <img src="img/roupas-limpas-nsclean.jpg" alt="imagem 2" />
                   </div>
                   <!-- Fim Imagens -->
 
@@ -440,6 +441,16 @@
                 <button><a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank">Orçamento</a></button>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="faixaCTA">
+          <h2>Entre em contato e solicite um orçãmento!</h2>
+          <div class="containerCTA">
+            <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20um%20orçamento!%20Vim%20pelo%20site😊" target="_blank"><i class="fa-brands fa-whatsapp"></i>(37)99111-4672</a>
+
+            <a href="https://wa.me/+5537991114672?text=Olá,%20gostaria%20de%20mais%20informações!%20Vim%20pelo%20site😊" target="_blank"><i class="fa-solid fa-phone"></i>(37)3226-1703</a>
+
+            <a href="mailto:nscleanlavanderia@gmail.com"><i class="fa-solid fa-envelope"></i>nscleanlavanderia@gmail.com</a>
           </div>
         </section>
 
@@ -702,10 +713,10 @@
                 </div>
               </div>
               <div class="item-contact">
-                <div><a href="mailto:contato@nsclean.com"><i class="fa-solid fa-envelope"></a></i></div>
+                <div><a href="mailto:nscleanlavanderia@gmail.com"><i class="fa-solid fa-envelope"></a></i></div>
                 <div class="contact-text">
                   <p>E-mail</p> 
-                  <p><a href="mailto:contato@nsclean.com">nscleanlavanderia@gmail.com 
+                  <p><a href="mailto:nscleanlavanderia@gmail.com">nscleanlavanderia@gmail.com 
                   </a></p>
                 </div>
               </div>
