--- a/index.html
+++ b/index.html
@@ -443,6 +443,53 @@
             </div>
           </div>
         </section>
+        <section class="galery">
+          <div class="subtitle--section">
+            <h2>Soluções de Limpeza em Ação: Assista Nossos Vídeos</h2>
+          </div>
+          <div class="galeryContainer">
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+              <div class="video-item">
+                <video src="img/nsclean-estofados.mp4" controls width="100%" height="400px" poster="img/nsclean-nova-serrana-contato.png" preload="metadata" title="Video fazendo Higienização no sofá">
+                  Seu navegador não suporta o vídeo.
+                </video>
+              </div>
+          </div>
+        </section>
         <section class="faixaCTA">
           <h2>Entre em contato e solicite um orçãmento!</h2>
           <div class="containerCTA">
@@ -464,7 +511,7 @@
           </div>
 
           <div class="slider2">
-            <div class="slides2">
+            <div class="slides2">     
               <!-- Start input -->
               <input type="radio" name="btn-radio2" id="radio-1" />
               <input type="radio" name="btn-radio2" id="radio-2" />
