--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#testemunhas">Cliente</a></li>
+                <li><a href="#galery">Galeria</a></li>
                 <li><a href="#contact">Contato</a></li>
               </ul>
               <span class="copy">&copy;Ns Clean 2024</span>
@@ -443,7 +444,10 @@
             </div>
           </div>
         </section>
-        <section class="galery">
+        <section class="galery" id="galery">
+          <div class="titleSection">
+            <h3>Galery</h3>
+          </div>
           <div class="subtitle--section">
             <h2>Soluções de Limpeza em Ação: Assista Nossos Vídeos</h2>
           </div>
